--- a/Index.html
+++ b/Index.html
@@ -65,7 +65,7 @@
       </div>
 </div>
 
-
+<!-- 2nd card -->
 <div class="option-card"  onclick="selectOption(this)">
   <div class="main">
   <div class="unit">
@@ -122,7 +122,7 @@
     </div>
 </div>
 
-
+<!-- 3rd card -->
 <div class="option-card"  onclick="selectOption(this)">
   <div class="main">
   <div class="unit">
